modif conf prod bdd

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     compile "joda-time:joda-time:2.9.7"
     compile "org.grails.plugins:spring-security-rest:2.0.0.M2"
     compile "org.grails.plugins:spring-security-core:3.1.1"
+
+//    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+ //   compile('org.postgresql:postgresql:9.4.1212')
   //  compile "org.grails.plugins:views-json"
   //  compile "org.grails.plugins:views-json-templates"
     console "org.grails:grails-console"
@@ -77,7 +80,14 @@ dependencies {
     testRuntime "net.sourceforge.htmlunit:htmlunit:2.18"
 
     provided "org.springframework.boot:spring-boot-starter-tomcat"
+
 }
+/*
+spring:
+datasource:
+url: ${JDBC_DATABASE_URL}
+username: ${JDBC_DATABASE_USERNAME}
+password: ${JDBC_DATABASE_PASSWORD}*/
 
 bootRun {
     jvmArgs('-Dspring.output.ansi.enabled=always')
